# pinggenius_backend

./: .gitignore  README.md  agent_core.py  gmail_service.py  main.py  pyproject.toml  requirements.txt
api/v1/: analyze_email.py  gamail_scheduler.py  generate_email.py  generate_sequence.py  hard_emails.py  list_all_email.py  list_contacts.py  outreach_email.py  refine_hard_emails.py  save_contact.py  sequence_job_status.py  start_sequence.py  stop_sequence.py
config/: limit.py
database/: mongo.py
models/: analytics_overview.py  contact.py  emails.py  hard_email.py  jobs.py  sequence.py  sequence_job.py  users.py
utils/: APScheduler.py  analytics_service.py  email_generator.py  email_processor.py  email_sender.py  extract_name.py  extract_subject.py  followup_generator.py  followups_agent.py  hard_email_replyer.py  linkedin-scraper.py  linkedin_scraper.py  qouta.py  regex_junk_detection.py  scheduler.py  send_emails_via_smtp.py
